Tue Apr 29 07:47:34 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - packaging/Makefile.am,README: forgot to add opensuse

Tue Apr 29 07:44:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - man/Makefile.am: backport from Testing [r1456]

Tue Apr 29 07:30:01 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - packaging/opensuse: add packaging for SuSE / openSUSE

Tue Apr 22 19:55:53 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: functions in common/common.c will not be
   available to clients that are linked to the library

Tue Apr 22 19:45:34 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - man/Makefile.am: fix dependencies for libupsclient-config.1 and
   netxml-ups.8

Tue Apr 22 17:58:12 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/usbhid-ups: only check once for input reports in
   upsdrv_updateinfo() to prevent lockups if the UPS floods the
   driver (some Tripplite units will generate one each time you
   ask them)

Mon Apr 14 09:48:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: add internal fault as separate alarm status,
   removed unused status and alarm bits

Mon Apr 14 07:05:09 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/main-hal.c,main.[ch],updrvctl.c: cleanup signal handling

Mon Apr 14 06:58:39 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: cleanup signal handling, removed -f option
   (programs won't background when running in debug mode)

Mon Apr 14 06:47:51 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: don't spam the syslog if we can't connect to
   the UPS

Tue Apr  8 19:24:46 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: cleanup the driver a bit

Tue Apr  8 18:32:30 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/main.[ch]: added some variables in list of globals
 - drivers/serial.c,drivers/snmp-ups.h: implemented the above
