@@ -1,8 +1,8 @@
 EXTRA_DIST = nut.spec nut.spec.in \
- nut.firewall nut.firewall.in \
  README.SUSE \
  nut-powersave.patch \
  nut-preconfig.patch \
+ nut.firewall.in \
  upsd.init \
  upsmon.init \
  upsd.dbus-1 \
